# whatsapp-backup-downloader-decryptor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
wabdd/: __init__.py  __main__.py  constants.py  utils.py  wabackup.py
wabdd/commands/: cookie.py  decrypt.py  download.py  token.py
