[tool.poetry]
name = "wabdd"
version = "0.1.5"
description = "WhatsApp Backup Google Drive Downloader Decryptor"
authors = ["Giacomo Ferretti <giacomo.ferretti.00@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/giacomoferretti/frida-type-generator"
packages = [{include = "wabdd"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/giacomoferretti/frida-type-generator/issues"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
gpsoauth = "^1.1.1"
requests = "^2.32.3"
pycryptodomex = "^3.21.0"
inquirer = "^3.4.0"
rich = ">=13.9.4,<15.0.0"
wa-crypt-tools = "^0.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.7.4,<0.13.0"

[tool.poetry.scripts]
wabdd = "wabdd.__main__:cli"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.pytest.ini_options]
addopts = "--cov=wabdd --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
